# document-rag-demo

./: .gitignore  pyproject.toml
data/pdf/: Machu_Picchu.pdf:Zone.Identifier
src/chunkers/: chunking-techniques-langchain.ipynb
src/document_rag_demo/: pdf-search-base.ipynb  pdf-search-context-embedding.ipynb  pdf_embeddings_basic.ipynb  pdf_embeddings_chroma.ipynb  vector_embedding_basics.ipynb
